--- a/JHLabel.csproj
+++ b/JHLabel.csproj
@@ -64,4 +64,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0-preview.1.25080.5" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<!-- SQLite와 ZXing.Net.MAUI 패키지 추가 -->
+		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+		<PackageReference Include="ZXing.Net.MAUI" Version="0.2.2" />
+	</ItemGroup>
+
 </Project>
