--- a/JHLabel.csproj
+++ b/JHLabel.csproj
@@ -65,9 +65,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!-- SQLite와 ZXing.Net.MAUI 패키지 추가 -->
+		<PackageReference Include="ZXing.Net.MAUI" Version="0.4.0" />
+		<PackageReference Include="SkiaSharp" Version="2.88.3" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-		<PackageReference Include="ZXing.Net.MAUI" Version="0.2.2" />
 	</ItemGroup>
 
 </Project>
