--- a/JHLabel.csproj
+++ b/JHLabel.csproj
@@ -66,8 +66,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="ZXing.Net.MAUI" Version="0.4.0" />
-		<PackageReference Include="SkiaSharp" Version="3.116.1" />
-		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+		<PackageReference Include="SkiaSharp" Version="3.118.0-preview.2.3" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.10.196-beta" />
 	</ItemGroup>
 
 </Project>
